--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h2 class="acesseRedes">Acesse minhas redes:</h2>
                     <a class="links_links" href="https://www.instagram.com/gabrieelmtts/">Instagram</a>
                     <a class="links_links" href="https://github.com/gabrieelmttss">GitHub</a>
-                    <a class="links_links" href="https://github.com/gabrieelmttss">Linkedin</a>
+                    <a class="links_links" href="https://www.linkedin.com/in/gabrieelmattos/">Linkedin</a>
                 </div>
         </section>
             <img class="minhaFoto" src="img/1.png" alt="foto Gabriel Almeida">
