--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <p class="texto2ola">Olá! Sou Gabriel Almeida, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
                 <div class="links">
                     <h2 class="acesseRedes">Acesse minhas redes:</h2>
-                    <a class="links_links" href="https://www.instagram.com/gabrieelmtts/">Instagram</a>
-                    <a class="links_links" href="https://github.com/gabrieelmttss">GitHub</a>
-                    <a class="links_links" href="https://www.linkedin.com/in/gabrieelmattos/">Linkedin</a>
+                    <a class="links_links" href="https://www.instagram.com/gabrieelmtts/"> <img class="iconesSociais" src="img/instagram.png" alt="logo instagram"> Instagram</a>
+                    <a class="links_links" href="https://github.com/gabrieelmttss"> <img class="iconesSociais" src="img/github.png" alt="logo github"> GitHub</a>
+                    <a class="links_links" href="https://www.linkedin.com/in/gabrieelmattos/"> <img class="iconesSociais" src="img/linkedin.png" alt="logo linkedin"> Linkedin</a>
                 </div>
         </section>
             <img class="minhaFoto" src="img/1.png" alt="foto Gabriel Almeida">
