--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
         <section class="textoELinks">
             <h1 class="texto1eleve">Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
             <p class="texto2ola">Olá! Sou Gabriel Almeida, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+                <div class="links">
+                    <h2 class="acesseRedes">Acesse minhas redes:</h2>
+                    <a class="links_links" href="https://www.instagram.com/gabrieelmtts/">Instagram</a>
+                    <a class="links_links" href="https://github.com/gabrieelmttss">GitHub</a>
+                    <a class="links_links" href="https://www.linkedin.com/in/gabrieelmattos/">Linkedin</a>
+                </div>
         </section>
-        
             <img class="minhaFoto" src="img/1.png" alt="foto Gabriel Almeida">
     </main>
     <footer class="footer">
